[package]
name = "space"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.11.3", features = ["dynamic_linking", "wayland"] }
bevy_pancam = "0.9.0"
rand = "0.8.5"

[dev-dependencies]
bevy = { version = "0.11.3", features = ["dynamic_linking", "wayland"] }
